force-app/main/default/objects/League_Member_Season__c/League_Member_Season__c.object-meta.xml
<CustomObject>
    <label>League Member Season</label>
    <nameField>
        <label>League Member Season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>League Member Seasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>