force-app/main/default/objects/League_Member_Season__c/fields/Draft_Order__c.field-meta.xml
<CustomField>
    <fullName>Draft_Order__c</fullName>
    <label>Draft Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>