force-app/main/default/objects/League_Member_Season__c/fields/Draft_Season__c.field-meta.xml
<CustomField>
    <fullName>Draft_Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft Season</label>
    <referenceTo>Draft_Season__c</referenceTo>
    <relationshipLabel>League Member Seasons</relationshipLabel>
    <relationshipName>League_Member_Seasons</relationshipName>
    <type>Lookup</type>
</CustomField>