force-app/main/default/objects/League_Member_Season__c/fields/League_Member__c.field-meta.xml
<CustomField>
    <fullName>League_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>League Member</label>
    <referenceTo>League_Member__c</referenceTo>
    <relationshipLabel>League Member Seasons</relationshipLabel>
    <relationshipName>League_Member_Seasons</relationshipName>
    <type>Lookup</type>
</CustomField>